# bevy_rts

./: Cargo.toml  index.html  web.sh
assets/scripts/: game_logic.rhai
assets/shaders/: particle.wgsl
src/: main.rs  particles.rs  throw.rs  tree.rs
